# Wisely

./: .env.example  .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt  test_clip_detection.py  test_full_pipeline.py
scripts/: setup_dev.sh
src/: main.py
src/api/: main.py
src/api/routes/: pipeline.py  upload.py
src/components/: UploadTab.jsx
src/services/broll_matching/: matcher.py
src/services/clip_detection/: detector.py
src/services/orchestration/: pipeline.py
src/services/video_processing/: processor.py
